package me.djalil.philo;

// TODO: Add JavaDocs
public interface SimView {
    void redraw();
    void start();
    void stop();
}
